# sentinel

./: .env.example  .gitignore  README.md  links.txt
presentations/final/: prezentace.tex
presentations/first/: notes.txt  prezentace.tex  slides_cz.tex  slides_en.tex
thesis/: llm_red_teaming-01-kapitoly-chapters-en.tex  llm_red_teaming-20-literatura-bibliography.bib  llm_red_teaming-30-prilohy-appendices-en.tex  llm_red_teaming.tex
thesis/deleted/: deleted.00a  deleted.00c  deleted.00e  deleted.010  deleted.012  deleted.014  deleted.016  deleted.018  deleted.01a  index
thesis/obrazky-figures/: design.drawio  impl-execution-flow.drawio  impl-multiturn-timeline.drawio  impl-parallelism.drawio
toolkit/: .gitignore  README.md  pyproject.toml
toolkit/manifests/: black-box-llama.yaml  comprehensive-attacks.yaml  einfra-api.yaml  einfra-creative-001.yaml  example.yaml  minimal-attack.yaml  multi-everything-example.yaml  multi-turn-conversation.yaml  prompt-injection.yaml  qwen25-7b-adapter.yaml  qwen25-7b-attacker.yaml  qwen25-7b-judge.yaml  qwen36-judge.yaml  single-turn-jailbreak.yaml  token-perturbation.yaml  universal-trigger.yaml  white-box-llama.yaml
toolkit/src/redteam/: __init__.py  cli.py  logger.py  manifest.py  orchestrator.py  plugins.py
toolkit/src/redteam/adapters/: base.py  stub.py
toolkit/src/redteam/attacks/: base.py  stub.py
toolkit/src/redteam/judges/: __init__.py  base.py  heuristic.py  stub.py
toolkit/src/sentinel/: __init__.py  analysis.py  cli.py  cli_display.py  concurrency.py  logger.py  manifest.py  metrics.py  models.py  openai_api_utils.py  orchestrator.py  orchestrator_components.py  orchestrator_lifecycle.py  orchestrator_runtime.py  plugins.py  verdict.py
toolkit/src/sentinel/analysis/: __init__.py  analyzer.py  printer.py  reports.py
toolkit/src/sentinel/generators/: __init__.py  base.py  llama_cpp.py  minimal_attack.py  multi_turn_conversation.py  obfuscation.py  openai_api.py  prompt_injection.py  single_turn_jailbreak.py  stub.py  token_perturbation.py  universal_trigger.py
toolkit/src/sentinel/judges/: base.py  heuristic.py  llama_cpp.py  openai_api.py  stub.py
toolkit/src/sentinel/model_adapters/: __init__.py  base.py  llama_cpp.py  openai_api.py  stub.py
toolkit/tests/: test_concurrency.py  test_judges.py  test_llama_cpp_adapter.py  test_llama_cpp_judge.py  test_manifest.py  test_minimal_attack_generator.py  test_multiturn.py  test_openai_api_generator.py  test_orchestrator.py  test_verdict.py
