[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "A modular, lightweight LLM red-teaming toolkit."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Adam Veselý"},
]

dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.entry-points."sentinel.model_adapters"]
stub = "sentinel.model_adapters.stub:StubAdapter"
openai-api = "sentinel.model_adapters.openai_api:OpenAIApiAdapter"

[project.entry-points."sentinel.generators"]
stub-template = "sentinel.generators.stub:StubAttackGenerator"
single-turn-jailbreak = "sentinel.generators.single_turn_jailbreak:SingleTurnJailbreakGenerator"
prompt-injection = "sentinel.generators.prompt_injection:PromptInjectionGenerator"
token-perturbation = "sentinel.generators.token_perturbation:TokenPerturbationGenerator"
universal-trigger = "sentinel.generators.universal_trigger:UniversalTriggerGenerator"
multi-turn-conversation = "sentinel.generators.multi_turn_conversation:MultiTurnConversationGenerator"

[project.entry-points."sentinel.judges"]
heuristic = "sentinel.judges.heuristic:HeuristicJudge"
stub-judge = "sentinel.judges.stub:StubJudge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
